GROOVY-8917, GROOVY-9347, GROOVY-10049